--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
         <div class="container">
           <div class="navbar-header">
             <!--pull left is bootstrap way of saying float left. visible-md and visible-lg will ensure that the impage is visible only when the screen is not small-->
-            <a href="index.html" class="pull-left visible-md visible-lg">
+            <a
+              href="index.html"
+              class="pull-left visible-md visible-lg visible-sm visible-xs"
+            >
               <div id="logo-img" alt="Logo image"></div>
             </a>
             <div class="navbar-brand" id="nvbr01">
-              <a href="index.html"><h1>Archana Sweets</h1></a>
+              <a
+                href="index.html"
+                class="pull-left visible-md visible-lg visible-xs"
+                ><h1>Archana Sweets</h1></a
+              >
               <p>
                 <!--<img src="img/x.jpg" alt="sub text" />-->
-                <span>The Sweet People</span>
               </p>
             </div>
             <!--data-target="#collapsable-nav" points to the element with that ID-->
