--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="navbar-brand" id="nvbr01">
               <a
                 href="index.html"
-                class="pull-left visible-md visible-lg visible-xs"
+                class="pull-left visible-md visible-lg visible-xs visible-sm"
                 ><h1>Archana Sweets</h1></a
               >
               <p>
@@ -83,11 +83,10 @@
               <li>
                 <a href="cart.html">
                   <span class="glyphicon glyphicon-shopping-cart"></span
-                  ><br class="hidden-xs" />
-                  Cart</a
+                  ><br class="hidden-xs" />&nbsp;&nbsp; Cart</a
                 >
               </li>
-              <li id="phone" class="hidden-xs">
+              <li id="phone" class="hidden-xs hidden-sm">
                 <a href="tel:044-24344440"> <span>044-24344440</span></a>
                 <div>Call us for home delivery</div>
               </li>
@@ -98,12 +97,12 @@
         </div>
       </nav>
     </header>
-    <div id="call-btn" class="visible-xs">
+    <div id="call-btn" class="visible-xs visible-sm">
       <a class="btn" href="tel:044-24344440"
         ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
       >
     </div>
-    <div id="xs-deliver" class="text-center visible-xs">
+    <div id="xs-deliver" class="text-center visible-xs visible-sm">
       Call us for home delivery
     </div>
     <div id="main-content" class="container">
