--- a/about.html
+++ b/about.html
@@ -29,11 +29,18 @@
         <div class="container">
           <div class="navbar-header">
             <!--pull left is bootstrap way of saying float left. visible-md and visible-lg will ensure that the impage is visible only when the screen is not small-->
-            <a href="index.html" class="pull-left visible-md visible-lg">
+            <a
+              href="index.html"
+              class="pull-left visible-md visible-lg visible-sm visible-xs"
+            >
               <div id="logo-img" alt="Logo image"></div>
             </a>
             <div class="navbar-brand" id="nvbr01">
-              <a href="index.html"><h1>Archana Sweets</h1></a>
+              <a
+                href="index.html"
+                class="pull-left visible-md visible-lg visible-xs visible-sm"
+                ><h1>Archana Sweets</h1></a
+              >
               <p>
                 <!--<img src="img/x.jpg" alt="sub text" />-->
               </p>
@@ -80,7 +87,7 @@
                   Cart</a
                 >
               </li>
-              <li id="phone" class="hidden-xs">
+              <li id="phone" class="hidden-xs hidden-sm">
                 <a href="tel:044-24344440"> <span>044-24344440</span></a>
                 <div>Call us for home delivery</div>
               </li>
@@ -91,7 +98,7 @@
         </div>
       </nav>
     </header>
-    <div id="call-btn" class="visible-xs">
+    <div id="call-btn" class="visible-xs visible-sm">
       <a class="btn" href="tel:044-24344440"
         ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
       >
