--- a/success.html
+++ b/success.html
@@ -22,6 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Lora&family=Mukta&family=Source+Serif+Pro&family=Tiro+Kannada&display=swap"
       rel="stylesheet"
     />
+    <script type="module" src="js/success.js"></script>
   </head>
   <body>
     <header>
@@ -166,6 +167,5 @@
       integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
       crossorigin="anonymous"
     ></script>
-    <script src="js/script.js"></script>
   </body>
 </html>
