Formatting home page for mobile

--- a/cart.html
+++ b/cart.html
@@ -112,14 +112,15 @@
     <hr class="visible-xs visible-md visible-lg" />
     <!--Iteration of order items begins -->
     <section id="dorders" class="row"></section>
-
-    <a id="cart-button-link" href="success.html">
-      <button
-        id="cart-button-title"
-        type="button"
-        class="btn btn-primary"
-      ></button>
-    </a>
+    <div id="place-order-division">
+      <a id="cart-button-link" href="success.html">
+        <button
+          id="cart-button-title"
+          type="button"
+          class="btn btn-primary"
+        ></button>
+      </a>
+    </div>
     <!-- End of #Main Content -->
     <footer class="panel-footer">
       <div class="container">
