--- a/success.html
+++ b/success.html
@@ -113,9 +113,11 @@
       Your order (#87679) is successfully placed!
     </h1>
     <hr />
-    <a href="index.html">
-      <button type="button" class="btn btn-primary">Home</button>
-    </a>
+    <div id="success-division">
+      <a href="index.html">
+        <button type="button" class="btn btn-primary">Home</button>
+      </a>
+    </div>
     <!-- End of #Main Content -->
     <footer class="panel-footer">
       <div class="container">
