--- a/single-category.html
+++ b/single-category.html
@@ -113,15 +113,16 @@
 
     <!--Iteration of items begins -->
     <section id="dmenu" class="row"></section>
-    <hr class="visible-xs visible-md visible-lg" />
-    <a id="check-out-link" href="cart.html">
-      <button
-        id="check-out-button"
-        type="button"
-        class="btn btn-primary"
-      ></button>
-    </a>
-    <hr class="visible-xs visible-md visible-lg" />
+    <div id="check-out-division">
+      <hr class="visible-xs visible-md visible-lg" />
+      <a id="check-out-link" href="cart.html">
+        <button
+          id="check-out-button"
+          type="button"
+          class="btn btn-primary"
+        ></button>
+      </a>
+    </div>
     <!-- End of #Main Content -->
     <footer class="panel-footer">
       <div class="container">
