Categorized the menu

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -114,7 +114,7 @@
       </div>
       <section class="row">
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Kathilis">
             <div class="category-tile">
               <img
                 width="200"
@@ -122,145 +122,189 @@
                 src="img/menu/B/A.jpg"
                 alt="Any Timers"
               />
-              <span>Any Timers</span>
+              <span>Kathilis</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Kaju Specials">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/C.jpg"
-                alt="SPL Dosai"
+                alt="Kaju Specials"
               />
-              <span>SPL Dosai</span>
+              <span>Kaju Specials</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Kaju Fruits">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/D.jpg"
-                alt="Beverages"
+                alt="Kaju Fruits"
               />
-              <span>Hot Beverages</span>
+              <span>Kaju Fruits</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Mysurpauk">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/E.jpg"
-                alt="Beverages"
+                alt="Mysurpauk"
               />
-              <span>Cold Beverages</span>
+              <span>Mysurpauk</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Ladoo">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/F.jpg"
-                alt="Starters"
+                alt="Ladoo"
               />
-              <span>Starters</span>
+              <span>Ladoo</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Soanpapdi">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/G.jpg"
-                alt="Pizza"
+                alt="Soanpapdi"
               />
-              <span>Pizza</span>
+              <span>Soanpapdi</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Traditional">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/H.jpg"
-                alt="Snacks"
+                alt="Traditional"
               />
-              <span>Snacks</span>
+              <span>Traditional</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Generic">
             <div class="category-tile">
-              <img width="200" height="200" src="img/menu/B/I.jpg" alt="Chat" />
-              <span>Chat</span>
+              <img
+                width="200"
+                height="200"
+                src="img/menu/B/I.jpg"
+                alt="Generic"
+              />
+              <span>Generic</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Special Halwas">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/E.jpg"
-                alt="Juices"
+                alt="Special Halwas"
               />
-              <span>Juices</span>
+              <span>Special Halwas</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Burfis">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/J.jpg"
-                alt="Milkshakes"
+                alt="Burfis"
               />
-              <span>Milkshakes</span>
+              <span>Burfis</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Pedas">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/K.jpg"
-                alt="Ice Creams"
+                alt="Pedas"
               />
-              <span>Ice Creams</span>
+              <span>Pedas</span>
             </div>
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html">
+          <a href="single-category.html?cat=Milk Fruits">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/menu/B/L.jpg"
-                alt="Lassi"
+                alt="Milk Fruits"
               />
-              <span>Lassi</span>
+              <span>Milk Fruits</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Bengali Sweets">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/menu/B/J.jpg"
+                alt="Bengali Sweets"
+              />
+              <span>Bengali Sweets</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Jamuns">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/menu/B/K.jpg"
+                alt="Jamuns"
+              />
+              <span>Jamuns</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Kalakhand">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/menu/B/L.jpg"
+                alt="Kalakhand"
+              />
+              <span>Kalakhand</span>
             </div>
           </a>
         </div>
