--- a/single-category.html
+++ b/single-category.html
@@ -123,6 +123,15 @@
         ></button>
       </a>
     </div>
+    <div id="back-from-checkout">
+      <a id="back-from-checkout-link" href="menu-categories.html">
+        <button
+          id="back-from-checkout-button"
+          type="button"
+          class="btn btn-primary"
+        ></button>
+      </a>
+    </div>
     <!-- End of #Main Content -->
     <footer class="panel-footer">
       <div class="container">
