Adding count to the cart

--- a/specials.html
+++ b/specials.html
@@ -82,7 +82,10 @@
               </li>
               <li>
                 <a href="cart.html">
-                  <span class="glyphicon glyphicon-shopping-cart"></span
+                  <span
+                    id="nav-no-of-items-cart"
+                    class="glyphicon glyphicon-shopping-cart"
+                  ></span
                   ><br class="hidden-xs" />
                   Cart</a
                 >
@@ -116,7 +119,10 @@
             <div class="menu-item-photo">
               <div>
                 <a href="cart.html"
-                  ><span class="glyphicon glyphicon-shopping-cart"></span
+                  ><span
+                    id="nav-no-of-items-cart"
+                    class="glyphicon glyphicon-shopping-cart"
+                  ></span
                 ></a>
               </div>
               <img
@@ -146,7 +152,10 @@
             <div class="menu-item-photo">
               <div>
                 <a href="cart.html"
-                  ><span class="glyphicon glyphicon-shopping-cart"></span
+                  ><span
+                    id="nav-no-of-items-cart"
+                    class="glyphicon glyphicon-shopping-cart"
+                  ></span
                 ></a>
               </div>
               <img
@@ -179,7 +188,10 @@
             <div class="menu-item-photo">
               <div>
                 <a href="cart.html"
-                  ><span class="glyphicon glyphicon-shopping-cart"></span
+                  ><span
+                    id="nav-no-of-items-cart"
+                    class="glyphicon glyphicon-shopping-cart"
+                  ></span
                 ></a>
               </div>
               <img
@@ -209,7 +221,10 @@
             <div class="menu-item-photo">
               <div>
                 <a href="cart.html"
-                  ><span class="glyphicon glyphicon-shopping-cart"></span
+                  ><span
+                    id="nav-no-of-items-cart"
+                    class="glyphicon glyphicon-shopping-cart"
+                  ></span
                 ></a>
               </div>
               <img
@@ -241,7 +256,10 @@
             <div class="menu-item-photo">
               <div>
                 <a href="cart.html"
-                  ><span class="glyphicon glyphicon-shopping-cart"></span
+                  ><span
+                    id="nav-no-of-items-cart"
+                    class="glyphicon glyphicon-shopping-cart"
+                  ></span
                 ></a>
               </div>
               <img
@@ -271,7 +289,10 @@
             <div class="menu-item-photo">
               <div>
                 <a href="cart.html"
-                  ><span class="glyphicon glyphicon-shopping-cart"></span
+                  ><span
+                    id="nav-no-of-items-cart"
+                    class="glyphicon glyphicon-shopping-cart"
+                  ></span
                 ></a>
               </div>
               <img
