--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
               </li>
               <li>
                 <a href="cart.html">
-                  <span class="glyphicon glyphicon-shopping-cart"></span
+                  <span
+                    id="nav-no-of-items-cart"
+                    class="glyphicon glyphicon-shopping-cart"
+                  ></span
                   ><br class="hidden-xs" />&nbsp;&nbsp; Cart</a
                 >
               </li>
