Adding count to the cart

--- a/cart.html
+++ b/cart.html
@@ -121,6 +121,7 @@
           id="cart-button-title"
           type="button"
           class="btn btn-primary"
+          onclick="clearCache();"
         ></button>
       </a>
     </div>
