Adding count to the cart

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -122,7 +122,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/A.jpg"
+                src="img/catg/B/A.jpg"
                 alt="Any Timers"
               />
               <span>Kathilis</span>
@@ -135,7 +135,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/C.jpg"
+                src="img/catg/B/B.jpg"
                 alt="Kaju Specials"
               />
               <span>Kaju Specials</span>
@@ -148,7 +148,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/D.jpg"
+                src="img/catg/B/A.jpg"
                 alt="Kaju Fruits"
               />
               <span>Kaju Fruits</span>
@@ -161,7 +161,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/E.jpg"
+                src="img/catg/B/C.jpg"
                 alt="Mysurpauk"
               />
               <span>Mysurpauk</span>
@@ -174,7 +174,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/F.jpg"
+                src="img/catg/B/D.jpg"
                 alt="Ladoo"
               />
               <span>Ladoo</span>
@@ -187,7 +187,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/G.jpg"
+                src="img/catg/B/E.jpg"
                 alt="Soanpapdi"
               />
               <span>Soanpapdi</span>
@@ -200,7 +200,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/H.jpg"
+                src="img/catg/B/F.jpg"
                 alt="Traditional"
               />
               <span>Traditional</span>
@@ -213,7 +213,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/I.jpg"
+                src="img/catg/B/G.jpg"
                 alt="Generic"
               />
               <span>Generic</span>
@@ -226,7 +226,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/E.jpg"
+                src="img/catg/B/H.jpg"
                 alt="Special Halwas"
               />
               <span>Special Halwas</span>
@@ -239,7 +239,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/J.jpg"
+                src="img/catg/B/I.jpg"
                 alt="Burfis"
               />
               <span>Burfis</span>
@@ -252,7 +252,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/K.jpg"
+                src="img/catg/B/J.jpg"
                 alt="Pedas"
               />
               <span>Pedas</span>
@@ -265,7 +265,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/L.jpg"
+                src="img/catg/B/K.jpg"
                 alt="Milk Fruits"
               />
               <span>Milk Fruits</span>
@@ -278,7 +278,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/J.jpg"
+                src="img/catg/B/L.jpg"
                 alt="Bengali Sweets"
               />
               <span>Bengali Sweets</span>
@@ -291,7 +291,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/K.jpg"
+                src="img/catg/B/M.jpg"
                 alt="Jamuns"
               />
               <span>Jamuns</span>
@@ -304,7 +304,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/menu/B/L.jpg"
+                src="img/catg/B/N.jpg"
                 alt="Kalakhand"
               />
               <span>Kalakhand</span>
