--- a/menu-categories.html
+++ b/menu-categories.html
@@ -122,8 +122,8 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/A.jpg"
-                alt="Any Timers"
+                src="img/catg/B/a.jpg"
+                alt="Kathilis"
               />
               <span>Kathilis</span>
             </div>
@@ -135,7 +135,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/B.jpg"
+                src="img/catg/B/b.jpg"
                 alt="Kaju Specials"
               />
               <span>Kaju Specials</span>
@@ -148,7 +148,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/A.jpg"
+                src="img/catg/B/a.jpg"
                 alt="Kaju Fruits"
               />
               <span>Kaju Fruits</span>
@@ -161,7 +161,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/C.jpg"
+                src="img/catg/B/c.jpg"
                 alt="Mysurpauk"
               />
               <span>Mysurpauk</span>
@@ -174,7 +174,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/D.jpg"
+                src="img/catg/B/d.jpg"
                 alt="Ladoo"
               />
               <span>Ladoo</span>
@@ -187,7 +187,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/E.jpg"
+                src="img/catg/B/e.jpg"
                 alt="Soanpapdi"
               />
               <span>Soanpapdi</span>
@@ -200,7 +200,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/F.jpg"
+                src="img/catg/B/f.jpg"
                 alt="Traditional"
               />
               <span>Traditional</span>
@@ -213,7 +213,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/G.jpg"
+                src="img/catg/B/g.jpg"
                 alt="Generic"
               />
               <span>Generic</span>
@@ -226,7 +226,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/H.jpg"
+                src="img/catg/B/h.jpg"
                 alt="Special Halwas"
               />
               <span>Special Halwas</span>
@@ -239,7 +239,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/I.jpg"
+                src="img/catg/B/i.jpg"
                 alt="Burfis"
               />
               <span>Burfis</span>
@@ -252,7 +252,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/J.jpg"
+                src="img/catg/B/j.jpg"
                 alt="Pedas"
               />
               <span>Pedas</span>
@@ -265,7 +265,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/K.jpg"
+                src="img/catg/B/k.jpg"
                 alt="Milk Fruits"
               />
               <span>Milk Fruits</span>
@@ -278,7 +278,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/L.jpg"
+                src="img/catg/B/l.jpg"
                 alt="Bengali Sweets"
               />
               <span>Bengali Sweets</span>
@@ -291,7 +291,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/M.jpg"
+                src="img/catg/B/m.jpg"
                 alt="Jamuns"
               />
               <span>Jamuns</span>
@@ -304,7 +304,7 @@
               <img
                 width="200"
                 height="200"
-                src="img/catg/B/N.jpg"
+                src="img/catg/B/n.jpg"
                 alt="Kalakhand"
               />
               <span>Kalakhand</span>
