--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
       <div id="home-tiles" class="row">
         <div class="col-md-4 col-sm-6 col-xs-12">
           <a href="menu-categories.html"
-            ><div id="menu-tile"><span>menu</span></div></a
+            ><div id="menu-tile"><span>Sweets</span></div></a
           >
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
           <a href="specials.html"
-            ><div id="specials-tile"><span>specials</span></div></a
+            ><div id="specials-tile"><span>Savorites</span></div></a
           >
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
