Giving a new look

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           >
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="specials.html"
-            ><div id="specials-tile"><span>Savorites</span></div></a
+          <a href="single-category.html?cat=Specials"
+            ><div id="specials-tile"><span>Savouries</span></div></a
           >
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
