--- a/menu-categories.html
+++ b/menu-categories.html
@@ -208,15 +208,15 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-          <a href="single-category.html?cat=Generic">
+          <a href="single-category.html?cat=Specials">
             <div class="category-tile">
               <img
                 width="200"
                 height="200"
                 src="img/catg/B/g.jpg"
-                alt="Generic"
+                alt="Specials"
               />
-              <span>Generic</span>
+              <span>Specials</span>
             </div>
           </a>
         </div>
