Giving a new look

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <!--nav navbar-nav ensures that the elements are part of nav bar. navbar-right aligns to the right-->
             <ul id="nav-list" class="nav navbar-nav navbar-right">
               <li>
-                <a href="menu-categories.html">
+                <a href="sweet-categories.html">
                   <!--Glyficons are part of bootstrap https://getbootstrap.com/docs/3.4/components/#glyphicons-->
                   <span class="glyphicon glyphicon-cutlery"></span>
                   <!--THe class hidden-xs will hide the break element at xs size-->
