--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!--nav navbar-nav ensures that the elements are part of nav bar. navbar-right aligns to the right-->
             <ul id="nav-list" class="nav navbar-nav navbar-right">
               <li>
-                <a href="menu-categories.html">
+                <a href="sweet-categories.html">
                   <!--Glyficons are part of bootstrap https://getbootstrap.com/docs/3.4/components/#glyphicons-->
                   <span class="glyphicon glyphicon-cutlery"></span>
                   <!--THe class hidden-xs will hide the break element at xs size-->
@@ -132,12 +132,12 @@
       </div>
       <div id="home-tiles" class="row">
         <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="menu-categories.html"
+          <a href="sweet-categories.html"
             ><div id="menu-tile"><span>Sweets</span></div></a
           >
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="single-category.html?cat=Specials"
+          <a href="savouries-categories.html"
             ><div id="specials-tile"><span>Savouries</span></div></a
           >
         </div>
