--- a/savouries-categories.html
+++ b/savouries-categories.html
@@ -22,7 +22,6 @@
       href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Lora&family=Mukta&family=Source+Serif+Pro&family=Tiro+Kannada&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="js/success.js"></script>
   </head>
   <body>
     <header>
@@ -65,7 +64,7 @@
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <!--nav navbar-nav ensures that the elements are part of nav bar. navbar-right aligns to the right-->
             <ul id="nav-list" class="nav navbar-nav navbar-right">
-              <li>
+              <li class="active">
                 <a href="sweet-categories.html">
                   <!--Glyficons are part of bootstrap https://getbootstrap.com/docs/3.4/components/#glyphicons-->
                   <span class="glyphicon glyphicon-cutlery"></span>
@@ -74,7 +73,7 @@
                   Menu</a
                 >
               </li>
-              <li class="active">
+              <li>
                 <a href="about.html">
                   <span class="glyphicon glyphicon-info-sign"></span
                   ><br class="hidden-xs" />
@@ -102,7 +101,7 @@
         </div>
       </nav>
     </header>
-    <div id="call-btn" class="visible-xs visible-sm">
+    <div id="call-btn" class="visible-xs">
       <a class="btn" href="tel:044-24344440"
         ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
       >
@@ -110,16 +109,167 @@
     <div id="xs-deliver" class="text-center visible-xs">
       Call us for home delivery
     </div>
-    <div id="main-content" class="container"></div>
-    <hr />
-    <h1 id="success-title" class="text-center">
-      Your order (#87679) is successfully placed!
-    </h1>
-    <hr />
-    <div id="success-division">
-      <a href="index.html">
-        <button type="button" class="btn btn-primary">Home</button>
-      </a>
+    <div id="main-content" class="container">
+      <h2 id="menu-categories-title" class="text-center">
+        Savouries Categories
+      </h2>
+      <div class="text-center">
+        Availability of fruit based bevarages are seasonal as they are made from
+        fresh fruits.
+      </div>
+      <section class="row">
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Mixtures">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/o.jpg"
+                alt="Mixtures"
+              />
+              <span>Mixtures</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Murukku">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/p.jpg"
+                alt="Murukku"
+              />
+              <span>Murukku</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Pakora">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/a.jpg"
+                alt="Pakora"
+              />
+              <span>Pakora</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Sev">
+            <div class="category-tile">
+              <img width="200" height="200" src="img/catg/B/c.jpg" alt="Sev" />
+              <span>Sev</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Chips">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/d.jpg"
+                alt="Chips"
+              />
+              <span>Chips</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Cashews">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/e.jpg"
+                alt="Cashews"
+              />
+              <span>Cashews</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Peanuts">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/f.jpg"
+                alt="Peanuts"
+              />
+              <span>Peanuts</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Traditional">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/g.jpg"
+                alt="Traditional"
+              />
+              <span>Traditional</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Seedai">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/h.jpg"
+                alt="Seedai"
+              />
+              <span>Seedai</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Roasted Dhall">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/i.jpg"
+                alt="Roasted Dhall"
+              />
+              <span>Roasted Dhall</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Roasted Chenna">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/j.jpg"
+                alt="Roasted Chenna"
+              />
+              <span>Roasted Chenna</span>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+          <a href="single-category.html?cat=Potato Sticks">
+            <div class="category-tile">
+              <img
+                width="200"
+                height="200"
+                src="img/catg/B/k.jpg"
+                alt="Potato Sticks"
+              />
+              <span>Potato Sticks</span>
+            </div>
+          </a>
+        </div>
+      </section>
     </div>
     <!-- End of #Main Content -->
     <footer class="panel-footer">
@@ -134,8 +284,9 @@
           </section>
           <section id="address" class="col-sm-4">
             <span>Address:</span><br />
-            70, N Usman Rd, Postal Colony, <br />Parthasarathi Puram, T. Nagar,
-            <br />Chennai-00017
+            70, N Usman Rd, Postal Colony, <br />Parthasarathi Puram, T.
+            Nagar,<br />
+            Chennai-00017
             <p>
               * Delivery area within 5 Kms, with minimum order of Rs.200.
               Delivery charge may apply.
@@ -158,7 +309,6 @@
         </div>
       </div>
     </footer>
-
     <!--Java Script -->
     <!-- jQuery is needed for JS -->
     <script
@@ -172,5 +322,6 @@
       integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
       crossorigin="anonymous"
     ></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
