--- a/single-category.html
+++ b/single-category.html
@@ -66,7 +66,7 @@
             <!--nav navbar-nav ensures that the elements are part of nav bar. navbar-right aligns to the right-->
             <ul id="nav-list" class="nav navbar-nav navbar-right">
               <li class="active">
-                <a href="menu-categories.html">
+                <a href="sweet-categories.html">
                   <!--Glyficons are part of bootstrap https://getbootstrap.com/docs/3.4/components/#glyphicons-->
                   <span class="glyphicon glyphicon-cutlery"></span>
                   <!--THe class hidden-xs will hide the break element at xs size-->
@@ -128,7 +128,7 @@
     </div>
     <br />
     <div id="back-from-checkout">
-      <a id="back-from-checkout-link" href="menu-categories.html">
+      <a id="back-from-checkout-link" href="sweet-categories.html">
         <button
           id="back-from-checkout-button"
           type="button"
