--- a/cart.html
+++ b/cart.html
@@ -116,6 +116,9 @@
     <!--Iteration of order items begins -->
     <section id="dorders" class="row"></section>
     <div id="place-order-division">
+      <!-- Modal Begins-->
+
+      <!-- Modal Ends -->
       <a id="cart-button-link" href="success.html">
         <button
           id="cart-button-title"
