--- a/success.html
+++ b/success.html
@@ -112,6 +112,7 @@
     </div>
     <div id="main-content" class="container"></div>
     <hr />
+    <h1 id="success-title" class="text-center">Thank you!</h1>
     <h1 id="success-title" class="text-center">
       Your order (#87679) is successfully placed!
     </h1>
@@ -121,6 +122,7 @@
         <button type="button" class="btn btn-primary">Home</button>
       </a>
     </div>
+
     <!-- End of #Main Content -->
     <footer class="panel-footer">
       <div class="container">
