--- a/cart.html
+++ b/cart.html
@@ -116,18 +116,50 @@
     <!--Iteration of order items begins -->
     <section id="dorders" class="row"></section>
     <div id="place-order-division">
-      <!-- Modal Begins-->
-
-      <!-- Modal Ends -->
       <a id="cart-button-link" href="success.html">
         <button
           id="cart-button-title"
           type="button"
           class="btn btn-primary"
+          data-toggle="modal"
+          data-target="#myModal"
           onclick="clearCache();"
         ></button>
       </a>
     </div>
+
+    <!-- Modal Begins-->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <p>One fine body&hellip;</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+        <!-- /.modal-content -->
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+    <!-- Modal Ends -->
+
     <!-- End of #Main Content -->
     <footer class="panel-footer">
       <div class="container">
