--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container">
-          <div class="navbar-header">
+          <div class="navbar-header" id="navbar-header-id">
             <!--pull left is bootstrap way of saying float left. visible-md and visible-lg will ensure that the impage is visible only when the screen is not small-->
             <a
               href="index.html"
@@ -38,7 +38,7 @@
             <div class="navbar-brand" id="nvbr01">
               <a
                 href="index.html"
-                class="pull-left visible-md visible-lg visible-xs visible-sm"
+                class="pull-right visible-md visible-lg visible-xs visible-sm"
                 ><h1>Archana Sweets</h1></a
               >
               <p>
