Nav bar beautification

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a
               href="index.html"
               class="pull-left visible-md visible-lg visible-sm visible-xs"
+              id="a-element-behind-logo"
             >
               <div id="logo-img" alt="Logo image"></div>
             </a>
@@ -39,6 +40,7 @@
               <a
                 href="index.html"
                 class="pull-right visible-md visible-lg visible-xs visible-sm"
+                id="a-element-behind-brandname"
                 ><h1>Archana Sweets</h1></a
               >
               <p>
@@ -125,7 +127,7 @@
           <i class="fa fa-coffee service-icon"></i>
           <p>Freshly Made Foods</p>
           <i class="fa fa-award service-icon"></i>
-          <p>A healthy indulgence</p>
+          <p>A hygenic indulgence</p>
           <i class="fa fa-table service-icon"></i>
           <p>Online Order Booking</p>
         </h3>
