Nav bar beautification

--- a/cart.html
+++ b/cart.html
@@ -102,15 +102,16 @@
         </div>
       </nav>
     </header>
-    <div id="call-btn" class="visible-xs visible-sm">
+
+    <div id="call-btn" class="visible-xs visible-sm visible-md">
       <a class="btn" href="tel:044-24344440"
         ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
       >
     </div>
-    <div id="xs-deliver" class="text-center visible-xs">
+    <div id="xs-deliver" class="text-center visible-xs visible-sm visible-md">
       Call us for home delivery
     </div>
-    <div id="main-content" class="container"></div>
+
     <h2 id="cart-title" class="text-center"></h2>
     <hr class="visible-xs visible-md visible-lg" />
     <!--Iteration of order items begins -->
