--- a/index.html
+++ b/index.html
@@ -102,13 +102,16 @@
         </div>
       </nav>
     </header>
-    <div id="call-btn" class="visible-xs visible-sm">
-      <a class="btn" href="tel:044-24344440"
-        ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
-      >
-    </div>
-    <div id="xs-deliver" class="text-center visible-xs visible-sm">
-      Call us for home delivery
+    <div id="complete-body-under-nav"></div>
+    <div id="contact-region">
+      <div id="call-btn" class="visible-xs visible-sm">
+        <a class="btn" href="tel:044-24344440"
+          ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
+        >
+      </div>
+      <div id="xs-deliver" class="text-center visible-xs visible-sm">
+        Call us for home delivery
+      </div>
     </div>
     <div id="main-content" class="container">
       <div class="jumbotron">
@@ -161,6 +164,7 @@
       </div>
       <!-- End of #home-tiles -->
     </div>
+
     <!-- End of #Main Content -->
     <footer class="panel-footer">
       <div class="container">
