--- a/savouries-categories.html
+++ b/savouries-categories.html
@@ -101,12 +101,13 @@
         </div>
       </nav>
     </header>
-    <div id="call-btn" class="visible-xs">
+    <div id="complete-body-under-nav"></div>
+    <div id="call-btn" class="visible-xs visible-sm">
       <a class="btn" href="tel:044-24344440"
         ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
       >
     </div>
-    <div id="xs-deliver" class="text-center visible-xs">
+    <div id="xs-deliver" class="text-center visible-xs visible-sm">
       Call us for home delivery
     </div>
     <div id="main-content" class="container">
