--- a/single-category.html
+++ b/single-category.html
@@ -102,6 +102,7 @@
         </div>
       </nav>
     </header>
+    <div id="complete-body-under-nav"></div>
     <div id="call-btn" class="visible-xs visible-sm">
       <a class="btn" href="tel:044-24344440"
         ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
