--- a/single-category.html
+++ b/single-category.html
@@ -112,7 +112,7 @@
       Call us for home delivery
     </div>
     <div id="main-content" class="container"></div>
-    <h2 id="menu-categories-title" class="text-center">Any Timers</h2>
+    <h2 id="menu-categories-title" class="text-center"></h2>
     <div class="text-center">These items are available all during the day</div>
 
     <!--Iteration of items begins -->
