--- a/single-category.html
+++ b/single-category.html
@@ -123,7 +123,7 @@
         <button
           id="check-out-button"
           type="button"
-          class="btn btn-primary"
+          class="btn btn-primary mx-auto"
         ></button>
       </a>
     </div>
@@ -133,7 +133,7 @@
         <button
           id="back-from-checkout-button"
           type="button"
-          class="btn btn-primary"
+          class="btn btn-primary mx-auto"
         ></button>
       </a>
     </div>
